@@ -4,7 +4,6 @@ gvpe.conf - configuration file for the GNU VPE daemon
 
 =head1 SYNOPSIS
 
-   enable-udp = yes
    udp-port = 407
    mtu = 1492
    ifname = vpn0
@@ -314,12 +313,14 @@ is only 38 bytes, as opposed to UDP's 58 (or TCP's 60+).
 
 =item enable-udp = yes|true|on | no|false|off
 
-Enable the UDPv4 transport using the C<udp-port> port (default: C<yes>,
-but this will change!). This is a good general choice since UDP tunnels
-well through many firewalls.
+Enable the UDPv4 transport using the C<udp-port> port (default: C<no>,
+unless no other protocol is enabled for a node, in which case this
+protocol is enabled automatically). This is a good general choice since
+UDP tunnels well through many firewalls.
 
-NOTE: Please specify C<enable-udp = yes> even though it is the default, as
-some future version will have all protocols disabled by default.
+NOTE: Please specify C<enable-udp = yes> if you want t use it even though
+it might get switched on automatically, as some future version might
+default to another default protocol.
 
 =item enable-tcp = yes|true|on | no|false|off
 
